# WasIstLos

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: funding.yml
.github/workflows/: release.yml
appimage/: AppImageBuilder.yml
debian/: changelog  control  copyright  watch
debian/upstream/: metadata
po/: bn.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  ka.po  nl.po  pl.po  pt_BR.po  ru.po  si.po  tr.po  uk.po  wasistlos.pot  zh_Hans.po
resource/: CMakeLists.txt  gresource.xml
resource/desktop/: com.github.xeco23.WasIstLos.appdata.xml.in  com.github.xeco23.WasIstLos.desktop.in
resource/ui/: HdyPreferencesWindow.ui  MainWindow.ui
snap/: snapcraft.yaml
src/: CMakeLists.txt  Config.hpp.in  main.cpp
src/ui/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp  PhoneNumberDialog.cpp  PhoneNumberDialog.hpp  PreferencesWindow.cpp  PreferencesWindow.hpp  TrayIcon.cpp  TrayIcon.hpp  WebView.cpp  WebView.hpp
src/util/: Helper.cpp  Helper.hpp  SettingMap.hpp  Settings.cpp  Settings.hpp  Sound.cpp  Sound.hpp
